hw-2.3/task-2/network/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-svc
spec:
  selector:
    app: app
  ports:
    - name: http-svc
      port: 80
      targetPort: app-port-svc
